--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagina de Inicio</title>
-  <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="assents/style.css">
+  <link rel="stylesheet" href="assents/main.css">
 </head>
 <body>
     <h1>Encontre açaí pelo menor preço e com as melhores avaliações</h1>
