--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
       <div class="preco-container">
         <p class="preco">A partir de<br><strong>R$ 9.90</strong></p>
-        <a href="#" class="link-opcoes">Ver opções</a>
+        <a href="information/infof1.html" class="link-opcoes">Ver opções</a>
       </div>
     </div>
 
